assembly/src/snapshots/miden_assembly__tests__adv_has_map_key.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block push(2147483652) emit drop assert(0) end
end
