assembly/src/snapshots/miden_assembly__tests__advmap_push.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2)
        push(2)
        push(2)
        push(2)
        emit(574478993)
        assert(0)
        noop
    end
end
