assembly/src/snapshots/miden_assembly__tests__advmap_push_nokey.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(3846236276142386450)
        push(5034591595140902852)
        push(4565868838168209231)
        push(6740431856120851931)
        emit(574478993)
        assert(0)
        noop
    end
end
