assembly/src/snapshots/miden_assembly__tests__assert_eq_with_code.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        eq
        assert(0)
        eq
        assert(15491226248792286710)
        eq
        assert(15491226248792286710)
        noop
        noop
        noop
    end
end
