assembly/src/snapshots/miden_assembly__tests__assert_eqw_with_code.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        movup4
        eq
        assert(0)
        movup3
        eq
        assert(0)
        movup2
        eq
        assert(0)
        eq
        assert(0)
        movup4
        eq
        assert(15491226248792286710)
        movup3
        eq
        assert(15491226248792286710)
        movup2
        eq
        assert(15491226248792286710)
        eq
        assert(15491226248792286710)
        movup4
        eq
        assert(15491226248792286710)
        movup3
        eq
        assert(15491226248792286710)
        movup2
        eq
        assert(15491226248792286710)
        eq
        assert(15491226248792286710)
        noop
        noop
        noop
    end
end
