assembly/src/snapshots/miden_assembly__tests__assertz_with_code.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        eqz
        assert(0)
        eqz
        assert(15491226248792286710)
        eqz
        assert(15491226248792286710)
        noop
        noop
        noop
    end
end
