assembly/src/snapshots/miden_assembly__tests__basic_block_and_simple_if_true-2.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    join
        basic_block push(2) push(3) noop end
        if.true
            basic_block add end
        else
            basic_block noop end
        end
    end
end
